[package]
name = "soundness-testing-valgrind"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
csv = "1.3.1"
nix = { version = "0.29.0", features = ["signal"]}
nom = "8.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
